--- a/Nithin Portfolio/package.json
+++ b/Nithin Portfolio/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.0",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.438.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -32,7 +33,8 @@
     "sonner": "^1.5.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
